[package]
name = "array2d"
version = "0.3.0"
authors = ["Harrison McCullough <mccullough.harrison@gmail.com>"]
edition = "2018"
description = "A fixed sized two-dimensional array"
readme = "README.md"
license = "MIT"
repository = "https://github.com/HarrisonMc555/array2d"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
